--- a/FinSmart/src/App.css
+++ b/FinSmart/src/App.css
@@ -1,5 +1,4 @@
 * {
-  /* box-sizing: border-box; */
   margin: 0px;
   padding: 0px;
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
@@ -113,47 +112,56 @@
 }
 
 .header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   align-items: center;
-  bottom: 0 auto;
+  margin-bottom: 60px;
 }
 
 .status-container {
   display: flex;
-  gap: 10%;
+  gap: 20%;
   justify-content: center;
 }
 
 .stroke {
   width: 2px;
-  height: 20px;
+  height: 30px;
   background-color: rgb(255, 255, 255);
 }
 
 .status,
 .status2 {
-  font-weight: bolder;
   margin-top: -5px;
+  font-size: 12px;
+  z-index: 10;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: -80px;
+  font-weight: bold;
 }
 
 .user img {
   display: flex;
-  flex-direction: column;
+  /* flex-direction: column; */
   justify-content: center;
-  width: 50%;
+  align-items: center;
+  width: 100%;
   height: auto;
-  display: block;
   margin: 0 auto;
   margin-top: 0 auto;
-  margin-bottom: -55px;
+  margin-bottom: -100px;
 }
 
 input {
   display: flex;
+  flex-direction: column;
   background: none;
   outline: none;
   border-color: #732982;
   width: 300px;
-  flex-direction: column;
   margin: 0 auto;
   padding: 7px 15px;
   border: 1px solid #732982;
@@ -172,7 +180,7 @@ input {
 
 .signup {
   margin-bottom: -20px;
-  margin-top: 30px;
+  margin-top: 60px;
 }
 
 .email-field2 {
@@ -226,27 +234,11 @@ input {
 
 /* ---------------------------------------------------------------------------------------------------------------- */
 
-.Navbar{
-  background:#461051;
-  height: 80px;
+.logo2{
   display: flex;
-  justify-content:flex;
+  justify-content: center;
   align-items: center;
-  margin-top: -35px;
-  border-top-right-radius: 10px;
-  border-top-left-radius: 10px;
-}
-.header{
-  margin-left: 2rem;
-  font-size: 2rem;
-  height: 80px;
-  width: 200px;
-  display: flex;
-  justify-content: flex-start;
-  align-items:center;
-
-}
-
-.sideBarWrap{
-width: 100%;
+  flex-direction: column;
+  width: 150px;
+  margin-left: 40px;
 }
