--- a/FinSmart/src/App.css
+++ b/FinSmart/src/App.css
@@ -116,7 +116,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-bottom: 60px;
+  margin-bottom: 40px;
 }
 
 .status-container {
@@ -139,20 +139,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: -80px;
+  margin-bottom: -130px;
   font-weight: bold;
 }
 
-.user img {
+.logo1 {
   display: flex;
-  /* flex-direction: column; */
+  flex-direction: column;
   justify-content: center;
   align-items: center;
-  width: 100%;
+  width: 60%;
   height: auto;
   margin: 0 auto;
   margin-top: 0 auto;
-  margin-bottom: -100px;
+  margin-bottom: -150px;
 }
 
 input {
