--- a/FinSmart/src/App.css
+++ b/FinSmart/src/App.css
@@ -549,6 +549,8 @@ font-family: "Jersey 15", sans-serif;
 }
 /* ---------------------------------------------------------------------------------------------------------------- */
 
-/* Accounts Page */
+/* Progress Bar Component */
 
 /* ---------------------------------------------------------------------------------------------------------------- */
+
+
