--- a/FinSmart/src/App.css
+++ b/FinSmart/src/App.css
@@ -456,7 +456,7 @@ font-family: "Jersey 15", sans-serif;
 /* ---------------------------------------------------------------------------------------------------------------- */
 
 .Acc{
-
+    position: fixed;
     font-family: "Jersey 15", sans-serif;
     font-weight: 400;
     font-style: normal;
