--- a/FinSmart/src/App.css
+++ b/FinSmart/src/App.css
@@ -553,41 +553,19 @@ font-family: "Jersey 15", sans-serif;
 
 /* ---------------------------------------------------------------------------------------------------------------- */
 
-.progress {
-  position: relative;
-  /* with scale */
-  height: 20px;
-  width: 500px;
-  background-color: rgb(233, 236, 239);
-  border: 1px solid #c5c5c5;
-  border-radius: 15px;
-  overflow: hidden;
-}
 
-.progress div {
-  background-color: #00c251;
-  color: #fff;
-  height: 100%;
-  text-align: center;
-}
 
-.progress span {
-  position: absolute;
-  width: 100%;
+
+/* ---------------------------------------------------------------------------------------------------------------- */
+
+/* Chart Component */
+/* ---------------------------------------------------------------------------------------------------------------- */
+.dataCardcategoryCard {
+  width: 230px;
   display: flex;
-  justify-content: center;
-  align-items: center;
-  z-index: 99;
-}
-
-
-.dataCardcategoryCard{
-  width: 140px;
-  height: 400px;
-  display: flex;
-  justify-content: right;
-  flex-direction: column;
+  justify-content: flex-end;
+  flex-direction: row;
   position: absolute;
-  right:170px;
-  top:100px;
+  right: 220px;
+  bottom: 220px;
 }
