--- a/FinSmart/src/App.css
+++ b/FinSmart/src/App.css
@@ -820,10 +820,10 @@ flex-wrap: wrap;
   align-items: center;
   margin: 15px;
   margin-right: 500px;
-  background: rgb(169, 219, 255);
-  background: linear-gradient(90deg, rgba(169, 219, 255, 0.8567149271818102) 0%, rgba(255, 255, 255, 1) 47%, rgba(229, 187, 255, 1) 100%);
+  /* background: rgb(169, 219, 255); */
+  /* background: linear-gradient(90deg, rgba(169, 219, 255, 0.8567149271818102) 0%, rgba(255, 255, 255, 1) 47%, rgba(229, 187, 255, 1) 100%); */
   padding: 1px 10px;
-  border-radius: 11px;
+  /* border-radius: 11px; */
   font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
   font-weight: 700;
@@ -842,6 +842,10 @@ flex-wrap: wrap;
 }
 .financialInfo{
   margin-right: 400px;
-  font-weight:light;
+  font-weight:lighter;
   font-size:17px;
+}
+.incomeBox{
+  padding: 8px;
+  margin-bottom: 20px;
 }
