--- a/FinSmart/src/App.css
+++ b/FinSmart/src/App.css
@@ -268,7 +268,7 @@ margin-top: 80px;
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 150px;
+  width: 140px;
   margin-left: 40px;
 }
 
@@ -544,9 +544,185 @@ display: flex;
         box-shadow: 0 0 10px #f65a5a, 0 0 40px #f0152f9d, 0 0 80px #3b015aab;
 }
 
+.listOptions {
+  background: none;
+}
 
+.frequencyForm {
+  display: flex;
+  flex-direction: column;
+  margin-top: -20px;
+  margin-bottom: -20px;
+}
 
+.frequencyCheckbox {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
 
+  align-items: center;
+  gap: 40px;
+}
+
+.checkbox-wrapper-52 input[type="checkbox"] {
+  visibility: hidden;
+  display: none;
+}
+
+.checkbox-wrapper-52 label {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline;
+  line-height: 1;
+}
+
+.checkbox-wrapper-52 *,
+.checkbox-wrapper-52 ::after,
+.checkbox-wrapper-52 ::before {
+  box-sizing: border-box;
+}
+
+.checkbox-wrapper-52 .item .cbx {
+  position: relative;
+  top: 1px;
+  display: inline-block;
+  width: 14px;
+  height: 14px;
+  margin-right: 6px;
+  border: 1px solid #c8ccd4;
+  border-radius: 3px;
+  cursor: pointer;
+}
+
+.checkbox-wrapper-52 .item .cbx svg {
+  position: relative;
+  top: -1px;
+  transform: scale(0);
+  fill: none;
+  stroke-linecap: round;
+  stroke-linejoin: round;
+}
+
+.checkbox-wrapper-52 .item .cbx svg polyline {
+  stroke-width: 2;
+  stroke: #bb18cd;
+}
+
+.checkbox-wrapper-52 .item .cbx:before {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  margin: -10px 0 0 -10px;
+  width: 20px;
+  height: 20px;
+  border-radius: 100%;
+  background: #3cb8ff;
+  transform: scale(0);
+}
+
+.checkbox-wrapper-52 .item .cbx:after {
+  content: '';
+  position: absolute;
+  top: 5px;
+  left: 5px;
+  width: 2px;
+  height: 2px;
+  border-radius: 2px;
+  box-shadow: 0 -18px 0 #9423b7, 12px -12px 0 #cd18cd, 18px 0 0 #af18cd, 12px 12px 0 #cd18be, 0 18px 0 #9d18cd, -12px 12px 0 #ca18cd, -18px 0 0 #9418cd, -12px -12px 0 #ca18cd;
+  transform: scale(0);
+}
+
+.checkbox-wrapper-52 .item .cbx-lbl {
+  position: relative;
+  cursor: pointer;
+  transition: color 0.3s ease;
+}
+
+.checkbox-wrapper-52 .item .cbx-lbl:after {
+  content: '';
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 0;
+  height: 1px;
+  background: #fa61ff;
+}
+
+.checkbox-wrapper-52 .item input {
+  display: none;
+}
+
+.checkbox-wrapper-52 .item input:checked+.cbx {
+  border-color: transparent;
+}
+
+.checkbox-wrapper-52 .item input:checked+.cbx svg {
+  transform: scale(1);
+  transition: all 0.4s ease;
+  transition-delay: 0.1s;
+}
+
+.checkbox-wrapper-52 .item input:checked+.cbx:before {
+  transform: scale(1);
+  opacity: 0;
+  transition: all 0.3s ease;
+}
+
+.checkbox-wrapper-52 .item input:checked+.cbx:after {
+  transform: scale(1);
+  opacity: 0;
+  transition: all 0.6s ease;
+}
+
+.checkbox-wrapper-52 .item input:checked~.cbx-lbl {
+  color: #d778e6;
+}
+
+.checkbox-wrapper-52 .item input:checked~.cbx-lbl:after {
+  width: 100%;
+  transition: all 0.4s ease;
+}
+
+.checkbox-wrapper-39 *,
+.checkbox-wrapper-39 *::before,
+.checkbox-wrapper-39 *::after {
+  box-sizing: border-box;
+}
+
+.checkbox-wrapper-39 label {
+  display: block;
+  width: 25px;
+  height: 25px;
+  cursor: pointer;
+}
+
+.checkbox-wrapper-39 input {
+  visibility: hidden;
+  display: none;
+}
+
+.checkbox-wrapper-39 input:checked~.checkbox {
+  transform: rotate(45deg);
+  width: 14px;
+  margin-left: 12px;
+  border-color: #24c78e;
+  border-top-color: transparent;
+  border-left-color: transparent;
+  border-radius: 0;
+}
+
+.checkbox-wrapper-39 .checkbox {
+  display: block;
+  width: inherit;
+  height: inherit;
+  border: 3px solid #7d0671;
+  border-radius: 6px;
+  transition: all 0.375s;
+  }
 
 
 
@@ -681,6 +857,48 @@ font-family: "Syne", sans-serif;
   font-weight: bold;
   font-style: normal;
 }
+.accountHistoryList{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  margin-top: 20px;
+}
+.accountHistoryHeading{
+  margin-bottom: 20px;;
+}
+.accountName{
+    font-family: "Syne", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: 700;
+      font-style: normal;
+}
+.accountHistoryRow{
+  display: flex;
+  flex-direction: row ;
+  gap: 14px;
+  flex-direction: row;
+  margin: 4px;
+}
+.transactionInfo{
+  font-size: 12px;
+}
+.transactionHistoryLabel{
+  font-size: 15px;
+  font-family: "Karla", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-style: normal;
+
+}
+.transactionHistoryData{
+    font-size: 13px;
+    font-family: "DM Sans", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: light;
+      font-style:normal;
+      margin:2px;
+}
 /* ---------------------------------------------------------------------------------------------------------------- */
 
 /* Progress Bar Component */
@@ -732,6 +950,11 @@ font-family: "Space Grotesk", sans-serif;
   margin-inline-end: 40px;
   padding: 8px;
   margin: 0 auto;
+}
+.expenseBalanceTransaction{
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
 }
 
 /* ---------------------------------------------------------------------------------------------------------------- */
@@ -913,8 +1136,8 @@ box-shadow: 0px 5px 10px 0px rgba(255, 40, 223, 0.5),
 /* Income Statement */
 /* ---------------------------------------------------------------------------------------------------------------- */
 .incomeStatementLabel{
-  font-family: "Jersey 15", sans-serif;
-    font-weight: 400;
+  font-family: "Syne", sans-serif;
+    font-weight: bolder;
     font-style: normal;
     font-size: 36px;
     text-shadow:
@@ -927,91 +1150,152 @@ box-shadow: 0px 5px 10px 0px rgba(255, 40, 223, 0.5),
         0 0 4px rgb(0, 0, 0),
         0 0 3px rgb(2, 0, 0);
 }
-.topRow{
-  display: block;
-  margin: 4px;
-  margin-top: 10px;
-  font-family: "Space Grotesk", sans-serif;
-  font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: bold;
-  font-size: 16px;
-  text-shadow:
-        0 0 5px #c3f9fc,
-        0 0 10px #f9cdfd,
-        0 0 20px #000000,
-        0 0 40px rgb(1, 16, 16),
-        0 0 80px rgb(0, 0, 0),
-        0 0 90px rgb(0, 0, 0),
-        0 0 4px rgb(0, 0, 0),
-        0 0 3px rgb(2, 0, 0);
+.statementFilteringRow{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+  margin: 0 auto;
+  margin-bottom: 15px;
+  margin-top: 15px;
+  flex-wrap: nowrap;
+  border: dotted 1px;
+  width:300px;
+  padding: 3px;
+      box-shadow: 0px 5px 10px 0px rgba(40, 241, 255, 0.304),
+          0 0 20px rgba(255, 255, 255, 0.2),
+          inset 0px 5px 10px 0px rgba(203, 15, 255, 0.5),
+            0 0 20px rgba(255, 255, 255, 0.2);
 }
-.budgetTitle{
+.statementSortingLabel {
+  font-family: "Syne", sans-serif;
+    font-weight: 300;
+    font-style: normal;
+    font-size: 14px;
+    text-shadow:
+      0 0 5px #c3f9fc,
+      0 0 10px #f9cdfd,
+      0 0 20px #000000,
+      0 0 40px rgb(1, 16, 16),
+      0 0 80px rgb(0, 0, 0),
+      0 0 90px rgb(0, 0, 0),
+      0 0 4px rgb(0, 0, 0),
+      0 0 3px rgb(2, 0, 0);
+}
+
+.statementAligning {
+  margin-top: 20px;
+  margin-bottom: 20px;
+  display: flex;
+  flex-direction: column;
+}
+
+.statementList {
+  display: flex;
+  flex-direction: column;
+  padding: 7px;
+}
+
+.statementRows {
+  display: flex;
+  flex-direction: row;
+  padding: 4px;
+  gap: 190px;
+}
+
+.statementTotals {
+  font-family: "Karla", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 16px;
+}
+
+.statementIE {
+  font-family: "Syne", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 14px;
+  border-bottom: solid 1px #68c7ea93;
+  text-shadow:
+      0 0 5px #c3f9fc,
+      0 0 10px #f9cdfd,
+      0 0 20px #000000,
+      0 0 40px rgb(1, 16, 16),
+      0 0 80px rgb(0, 0, 0),
+      0 0 90px rgb(0, 0, 0),
+      0 0 4px rgb(0, 0, 0),
+      0 0 3px rgb(2, 0, 0);
+}
+
+.categoryLabels{
+    font-family: "Space Grotesk", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: 300;
+      font-style: normal;
+       margin-right: 400px;
+      text-shadow:
+          0 0 5px #f70088,
+          0 0 10px #f243ff,
+          0 0 20px #000000,
+          0 0 40px rgb(1, 16, 16),
+          0 0 80px rgb(0, 0, 0),
+          0 0 90px rgb(0, 0, 0),
+          0 0 4px rgb(0, 0, 0),
+          0 0 3px rgb(2, 0, 0);
+}
+
+.subcategoryLabels{
 font-family: "Space Grotesk", sans-serif;
   font-optical-sizing: auto;
-  margin: 8px;
-  font-weight: 600;
-  font-style: bold;
-  font-size: 19px;
-  text-shadow:
-    0 0 5px #d5f7f8,
-    0 0 10px #f9cdfd,
-    0 0 20px #000000,
-    0 0 40px rgb(1, 16, 16),
-    0 0 80px rgb(0, 0, 0),
-    0 0 90px rgb(0, 0, 0),
-    0 0 4px rgb(0, 0, 0),
-    0 0 3px rgb(2, 0, 0);
-    border-width: 30px;
-    border-color: #5af1f6;
+  font-weight: 400;
+  font-style: normal;
+  margin-right: 300px;
+  font-size: 13px;
+  border-bottom: solid 1px #d559eb89;
+          
 }
-.finTotals{
- margin: 0 auto;
-}
-.finValues{
-display: flex;
-  align-items: center;
-  font-weight: light;
-  margin: 0 auto;
-  border: thin;
-  text-decoration: underline;
-  padding: 5px;
-}
-.categoryLabels{
-display: flex;
-flex-wrap: wrap;
-  align-items: center;
-  margin: 15px;
-  margin-right: 500px;
-  /* background: rgb(169, 219, 255); */
-  /* background: linear-gradient(90deg, rgba(169, 219, 255, 0.8567149271818102) 0%, rgba(255, 255, 255, 1) 47%, rgba(229, 187, 255, 1) 100%); */
-  padding: 1px 10px;
-  /* border-radius: 11px; */
-  font-family: "Space Grotesk", sans-serif;
+.statementTotalValues {
+  font-family: "Inconsolata", monospace;
   font-optical-sizing: auto;
-  font-weight: 700;
-  font-style: bold;
-  font-size: 14px;
+  font-weight: 400;
+  font-style: normal;
+  font-variation-settings: "wdth" 100;
+  display: flex;
+  margin-left: auto;
+}
+.categoryTotal{
+  display: flex;
+  justify-content: flex-end;
+  gap: 7px;
+  margin-top: 6px;
+}
+.categoryTotalTitle{
+font-family: "Space Grotesk", sans-serif;
+  font-optical-sizing: auto;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 15px;
   text-shadow:
-    0 0 5px #c3f9fc,
-    0 0 10px #f9cdfd,
-    0 0 20px #000000,
-    0 0 40px rgb(1, 16, 16),
-    0 0 80px rgb(0, 0, 0),
-    0 0 90px rgb(0, 0, 0),
-    0 0 4px rgb(0, 0, 0),
-    0 0 3px rgb(2, 0, 0);
-    text-decoration: wavy;
+      0 0 5px #f70000,
+      0 0 10px #c56969,
+      0 0 20px #000000,
+      0 0 40px rgb(1, 16, 16),
+      0 0 80px rgb(0, 0, 0),
+      0 0 90px rgb(0, 0, 0),
+      0 0 4px rgb(0, 0, 0),
+      0 0 3px rgb(2, 0, 0);
 }
-.financialInfo{
-  margin-right: 400px;
-  font-weight:lighter;
-  font-size:17px;
+.categoryTotalValue{
+  font-family: "Inconsolata", monospace;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+    border-bottom: solid 1px #ffffff;
 }
-.incomeBox{
-  padding: 8px;
-  margin-bottom: 20px;
-}
+
 /* ---------------------------------------------------------------------------------------------------------------- */
 
 /* Settings page */
@@ -1086,7 +1370,7 @@ display: flex;
   display: flex;
   flex-direction: row;
   border-width: 1px;
-  border-style: solid;
+  border: solid 1px;
   padding: 7px;
     margin: 7px;
     gap: 7px;
@@ -1232,4 +1516,103 @@ border-image: linear-gradient(#9819f8, #6d027e) 20;
     transform: scale(1.5);
     transition-delay: 0s;
 
+}/* ---------------------------------------------------------------------------------------------------------------- */
+
+/* Transactions page */
+/* ---------------------------------------------------------------------------------------------------------------- */
+
+.transactionFiltering{
+  margin-top: 50px;
+  display: flex;
+  flex-direction: column;
+}
+.monthlyFiltering{
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  font-size: 20px;
+  gap: 12px;
+}
+.monthTransitionBtn{
+  background: none;
+  outline: none;
+  border: none;
+    font-size: 20px;
+}
+.transactionMonthValue{
+  font-size: 28px;
+    font-family: "Syne", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-style: normal;
+    margin: 4px;
+    text-transform: uppercase;
+    text-shadow:
+        0 0 5px #ff1bf7,
+        0 0 10px #efe4ff,
+        0 0 20px #000000,
+        0 0 40px rgb(1, 16, 16),
+        0 0 80px rgba(249, 215, 215, 0),
+        0 0 90px rgba(0, 0, 0, 0.637),
+        0 0 4px rgb(0, 0, 0),
+        0 0 3px rgb(2, 0, 0);
+}
+.transactionTypeFiltering{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  gap:20px;
+}
+.transactionFilterBtn{
+  background: none;
+    outline: none;
+    border: dotted 1px;
+    width: 70px;
+    padding: 4px;
+    box-shadow: inset 0 0 10px #89aafe, 0 0 40px #5038ba9d, 0 0 80px #537df9ab;
+}
+.transactionLabel{
+  display: flex;
+    flex-direction: row;
+    padding: 4px;
+    gap: 400px;
+}
+.transactionName{
+  font-family: "Syne", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: light;
+    font-style: normal;
+}
+.transactionRow{
+  display: flex;
+    flex-direction: row;
+    padding: 4px;
+    gap: 400px;
+}
+.transactionValueAmount{
+  font-family: "Inconsolata", monospace;
+    font-optical-sizing: auto;
+    font-weight: 400;
+    font-style: normal;
+    font-variation-settings: "wdth" 100;
+    display: flex;
+          margin-left: auto;
+}
+.transactionValue{
+      margin-left: auto;
+    font-family: "Karla", sans-serif;
+      font-optical-sizing: auto;
+      font-weight: light;
+      font-style: normal;
+          text-shadow:
+              0 0 5px #ff1bf7,
+              0 0 10px #efe4ff,
+              0 0 20px #000000,
+              0 0 40px rgb(1, 16, 16),
+              0 0 80px rgba(249, 215, 215, 0),
+              0 0 90px rgba(0, 0, 0, 0.637),
+              0 0 4px rgb(0, 0, 0),
+              0 0 3px rgb(2, 0, 0);
 }
